add <html> tags to html file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <h1 id="alexandre-m.-roberts">Alexandre M. Roberts</h1>
 <h2 id="publications">Publications</h2>
 <h3 id="articles">Articles</h3>
@@ -24,3 +25,4 @@
 <em>Behavioral Ecology</em> 19.3 (2008): 621–626.</p>
 <hr />
 <p>Updated January 2018.</p>
+</html>
