one pub per paragraph

--- a/index.html
+++ b/index.html
@@ -12,27 +12,24 @@
 <h1 id="alexandre-m.-roberts">Alexandre M. Roberts</h1>
 <h2 id="publications">Publications</h2>
 <h3 id="articles">Articles</h3>
-<p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.”<br />
-<em>Language Multiplicity in Byzantium and Beyond</em>, edited by Emilio Bonfiglio, Ekaterini Mitsiou, and Claudia Rapp (forthcoming).</p>
-<p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.”<br />
-<em>Patristic Literature in Arabic Translation</em>, edited by Barbara Roggema, Gregor Schwarb, and Alexander Treiger (forthcoming).</p>
-<p><a href="https://doi.org/10.5281/zenodo.893166">“Being a Sabian at Court in Tenth-Century Baghdad.”</a><br />
-<em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277.</p>
-<p><a href="https://doi.org/10.5281/zenodo.893168">“The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees.’”</a><br />
-<em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, edited by Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013): 279–303.</p>
-<p><a href="https://doi.org/10.5281/zenodo.893170">“Al-Mansur and the Critical Ambassador.”</a><br />
-<em>Bulletin d’études orientales</em> 60 (2011): 145–160.</p>
+<p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.” <em>Language Multiplicity in Byzantium and Beyond</em>, edited by Emilio Bonfiglio, Ekaterini Mitsiou, and Claudia Rapp (forthcoming).</p>
+<p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.” <em>Patristic Literature in Arabic Translation</em>, edited by Barbara Roggema, Gregor Schwarb, and Alexander Treiger (forthcoming).</p>
+<p><a href="https://doi.org/10.5281/zenodo.893166">“Being a Sabian at Court in Tenth-Century Baghdad.”</a> <em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277.</p>
+<p><a href="https://doi.org/10.5281/zenodo.893168">“The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees.’”</a> <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, edited by Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013): 279–303.</p>
+<p><a href="https://doi.org/10.5281/zenodo.893170">“Al-Mansur and the Critical Ambassador.”</a> <em>Bulletin d’études orientales</em> 60 (2011): 145–160.</p>
 <h3 id="encyclopedia-entries">Encyclopedia entries</h3>
-<p>“Basileios von Emesa”; “Theophilos von Edessa.”<br />
-<em>Lexikon byzantinischer Autoren</em>, ed. A. Riehle and M. Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
+<p>“Basileios von Emesa”; “Theophilos von Edessa.” <em>Lexikon byzantinischer Autoren</em>, ed. A. Riehle and M. Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 <h3 id="book-reviews">Book Reviews</h3>
-<p>Andrea De Giorgi, <em>Ancient Antioch from the Seleucid Era to the Islamic Conquest</em> (Cambridge University Press, 2016).<br />
-<a href="https://doi.org/10.1017/S1047759400074845">“The Paths and Memories Tying Antioch to Its Hinterland,”</a> <em>Journal of Roman Archaeology</em> 30 (2017): 810–817.</p>
-<p>Timothy Power, <em>The Red Sea from Byzantium to the Caliphate: AD 500–1000</em> (American University in Cairo Press, 2012).<br />
-<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">“In Mecca’s Backyard,”</a> <em>Marginalia Review of Books</em>, April 29, 2014.</p>
+<p>Andrea De Giorgi, <em>Ancient Antioch from the Seleucid Era to the Islamic Conquest</em> (Cambridge University Press, 2016).</p>
+<blockquote>
+<p><a href="https://doi.org/10.1017/S1047759400074845">“The Paths and Memories Tying Antioch to Its Hinterland,”</a> <em>Journal of Roman Archaeology</em> 30 (2017): 810–817.</p>
+</blockquote>
+<p>Timothy Power, <em>The Red Sea from Byzantium to the Caliphate: AD 500–1000</em> (American University in Cairo Press, 2012).</p>
+<blockquote>
+<p><a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">“In Mecca’s Backyard,”</a> <em>Marginalia Review of Books</em>, April 29, 2014.</p>
+</blockquote>
 <h3 id="other">Other</h3>
-<p>(with E.B. Liebgold) “The effects of perceived mortality risk on habitat selection in a terrestrial salamander.”<br />
-<em>Behavioral Ecology</em> 19.3 (2008): 621–626.</p>
+<p>(with E.B. Liebgold) “The effects of perceived mortality risk on habitat selection in a terrestrial salamander.” <em>Behavioral Ecology</em> 19.3 (2008): 621–626.</p>
 <hr />
 <p>Updated January 2018.</p>
 </body>
