--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.” <em>Patristic Literature in Arabic Translation</em>, edited by Barbara Roggema, Gregor Schwarb, and Alexander Treiger (forthcoming).</p>
 <p>“<a href="https://doi.org/10.5281/zenodo.893166">Being a Sabian at Court in Tenth-Century Baghdad</a>.” <em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277.</p>
 <p>“<a href="https://doi.org/10.5281/zenodo.893168">The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees.’</a>” <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, edited by Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013): 279–303.</p>
-<p>“<a href="https://doi.org/10.5281/zenodo.893170">Al-Mansur and the Critical Ambassador.</a>.” <em>Bulletin d’études orientales</em> 60 (2011): 145–160.</p>
+<p>“<a href="https://doi.org/10.5281/zenodo.893170">Al-Mansur and the Critical Ambassador</a>.” <em>Bulletin d’études orientales</em> 60 (2011): 145–160.</p>
 <h3 id="encyclopedia-entries">Encyclopedia entries</h3>
 <p>“Basileios von Emesa”; “Theophilos von Edessa.” <em>Lexikon byzantinischer Autoren</em>, ed. A. Riehle and M. Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 <h3 id="book-reviews">Book Reviews</h3>
