add affiliation; delete salamanders

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 <div id="header">
 <h1 class="title">Alexandre M. Roberts</h1>
 </div>
+<p>Assistant Professor of Classics<br />
+University of Southern California<br />
+Los Angeles, CA<br />
+[ <script type="text/javascript">
+<!--
+h='&#x75;&#x73;&#x63;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#114;&#x6f;&#98;&#x65;&#x39;&#52;&#x31;';e=n+a+h;
+document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
+// -->
+</script><noscript>&#114;&#x6f;&#98;&#x65;&#x39;&#52;&#x31;&#32;&#x61;&#116;&#32;&#x75;&#x73;&#x63;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> ]</p>
 <h1 id="publications">Publications</h1>
 <h2 id="articles">Articles</h2>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.” <em>Language Multiplicity in Byzantium and Beyond</em>, edited by Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (forthcoming).</p>
@@ -33,6 +42,6 @@
 <h2 id="other">Other</h2>
 <p>(with E.B. Liebgold) “The effects of perceived mortality risk on habitat selection in a terrestrial salamander.” <em>Behavioral Ecology</em> 19.3 (2008): 621–626.</p>
 <hr />
-<p><small>[<em>Last updated January 2018.</em>]</small></p>
+<p><small>[<em>Last updated March 2018.</em>]</small></p>
 </body>
 </html>
