--- a/index.html
+++ b/index.html
@@ -12,15 +12,10 @@
 <div id="header">
 <h1 class="title">Alexandre M. Roberts</h1>
 </div>
-<p>Assistant Professor of Classics<br />
+<p>Assistant Professor of Classics (Fall 2018–)<br />
 University of Southern California<br />
 Los Angeles, CA<br />
-[ <script type="text/javascript">
-<!--
-h='&#x75;&#x73;&#x63;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#114;&#x6f;&#98;&#x65;&#x39;&#52;&#x31;';e=n+a+h;
-document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
-// -->
-</script><noscript>&#114;&#x6f;&#98;&#x65;&#x39;&#52;&#x31;&#32;&#x61;&#116;&#32;&#x75;&#x73;&#x63;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> ]</p>
+[ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> ]</p>
 <h1 id="publications">Publications</h1>
 <h2 id="articles">Articles</h2>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.” <em>Language Multiplicity in Byzantium and Beyond</em>, edited by Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (forthcoming).</p>
