--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </blockquote>
 <p>Timothy Power, <em>The Red Sea from Byzantium to the Caliphate: AD 500–1000</em> (American University in Cairo Press, 2012).</p>
 <blockquote>
-<p>“<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">“In Mecca’s Backyard</a>,” <em>Marginalia Review of Books</em>, April 29, 2014.</p>
+<p>“<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">In Mecca’s Backyard</a>,” <em>Marginalia Review of Books</em>, April 29, 2014.</p>
 </blockquote>
 <hr />
 <p><small>[<em>Last updated March 2018.</em>]</small></p>
