--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 <div id="header">
 <h1 class="title">Alexandre M. Roberts</h1>
 </div>
+<p>Assistant Professor of Classics<br />
+University of Southern California<br />
+Los Angeles, CA<br />
+[ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> ]</p>
 <h1 id="publications">Publications</h1>
 <h2 id="articles">Articles</h2>
+<p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.” <em>The Diagram Paradigm: Byzantium, the Islamic World, and the Latin West</em>, edited by Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming).</p>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.” <em>Language Multiplicity in Byzantium and Beyond</em>, edited by Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (forthcoming).</p>
 <p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.” <em>Patristic Literature in Arabic Translation</em>, edited by Barbara Roggema, Gregor Schwarb, and Alexander Treiger (forthcoming).</p>
 <p>“<a href="https://doi.org/10.5281/zenodo.893166">Being a Sabian at Court in Tenth-Century Baghdad</a>.” <em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277.</p>
@@ -31,6 +36,6 @@
 <p>“<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">In Mecca’s Backyard</a>,” <em>Marginalia Review of Books</em>, April 29, 2014.</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated March 2018.</em>]</small></p>
+<p><small>[<em>Last updated July 2018.</em>]</small></p>
 </body>
 </html>
