add office address

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </div>
 <p>Assistant Professor of Classics<br />
 University of Southern California<br />
+3560 Watt Way, PED 132C<br />
 Los Angeles, California<br />
 [ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> ]</p>
 <h1 id="publications">Publications</h1>
