--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ University of Southern California<br />
 3560 Watt Way, PED 132C<br />
 Los Angeles, California<br />
 [ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> ]<br />
+[ <a href="https://hcommons.org/members/amroberts/">hcommons</a> ]<br />
 [ <a href="https://zenodo.org/search?page=1&amp;size=20&amp;q=creators.name:%22alexandre%20m.%20roberts%22">zenodo</a> ]</p>
 <h1 id="publications">Publications</h1>
 <h2 id="articles">Articles</h2>
