--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Los Angeles, California<br />
 <h1 id="publications">Publications</h1>
 <h2 id="articles">Articles</h2>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.” <em>The Diagram Paradigm: Byzantium, the Islamic World, and the Latin West</em>, edited by Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming).</p>
-<p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.” <em>Language Multiplicity in Byzantium and Beyond</em>, edited by Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (forthcoming).</p>
+<p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.” <em>Language Multiplicity in Byzantium and Beyond</em>, edited by Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna University Press through Vandenhoeck &amp; Ruprecht, forthcoming).</p>
 <p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.” <em>Patristic Literature in Arabic Translation</em>, edited by Barbara Roggema, Gregor Schwarb, and Alexander Treiger (forthcoming).</p>
 <p>“<a href="https://doi.org/10.5281/zenodo.893166">Being a Sabian at Court in Tenth-Century Baghdad</a>.” <em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277.</p>
 <p>“<a href="https://doi.org/10.5281/zenodo.893168">The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees.’</a>” <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, edited by Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013): 279–303.</p>
