compile md file modified in prev commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <![endif]-->
   <link rel="stylesheet" href="GitHub2.css">
 </head>
-<body> 
+<body>
 <header>
 <h1 class="title">Alexandre M. Roberts</h1>
 </header>
@@ -21,7 +21,7 @@ University of Southern California<br />
 Los Angeles, California<br />
 [ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> ]<br />
 [ <a href="https://hcommons.org/members/amroberts/">hcommons</a> ]<br />
-[ <a href="https://zenodo.org/search?page=1&amp;size=20&amp;q=creators.name:%22alexandre%20m.%20roberts%22">zenodo</a> ]</p>
+[ <a href="https://zenodo.org/communities/amroberts/">zenodo</a> ]</p>
 <h1 id="publications">Publications</h1>
 <h2 id="articles">Articles</h2>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.” <em>The Diagram Paradigm: Byzantium, the Islamic World, and the Latin West</em>, edited by Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming).</p>
