--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Los Angeles, California<br />
 [ <a href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo</a> ]</p>
 <h1 id="publications">Publications</h1>
 <h2 id="articles">Articles</h2>
+<p>“Framing a Middle Byzantine Alchemical Codex.” <em>Dumbarton Oaks Papers</em> 73 (forthcoming 2019).</p>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.” <em>The Diagram Paradigm: Byzantium, the Islamic World, and the Latin West</em>, edited by Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming).</p>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.” <em>Language Multiplicity in Byzantium and Beyond</em>, edited by Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna University Press through Vandenhoeck &amp; Ruprecht, forthcoming).</p>
 <p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.” <em>Patristic Literature in Arabic Translation</em>, edited by Barbara Roggema, Gregor Schwarb, and Alexander Treiger (forthcoming).</p>
