--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ Los Angeles, California</p>
 <a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid</a>
 </div>
 <h1 id="publications">Publications</h1>
+<h2 id="book">Book</h2>
+<p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, forthcoming June 2020).</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <p>“Framing a Middle Byzantine Alchemical Codex,” <em>Dumbarton Oaks Papers</em> 73 (forthcoming 2019).</p>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus,” in <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Linda Safran Jeffrey Hamburger, and David Roxburgh (Washington, DC: Dumbarton Oaks, forthcoming 2021).</p>
