--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 University of Southern California<br />
 3560 Watt Way, PED 132C<br />
 Los Angeles, California</p>
-<p>[ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> ]<br />
+[ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> ]<br />
 [ <a href="https://hcommons.org/members/amroberts/">hcommons</a> ]<br />
-[ <a href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo</a> ]</p>
+[ <a href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo</a> ]<br />
+
 <div itemscope="" itemtype="https://schema.org/Person">
-<a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid</a>
+[ <a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:.7em;margin-right:.5em;" alt="ORCID iD icon">orcid</a> ]
 </div>
 <h1 id="publications">Publications</h1>
 <h2 id="book">Book</h2>
