--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </header>
 <p>Assistant Professor of Classics<br />
 University of Southern California<br />
-3560 Watt Way, PED 132C<br />
 Los Angeles, California</p>
 [ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> ]<br />
 [ <a href="https://hcommons.org/members/amroberts/">hcommons</a> ]<br />
@@ -30,12 +29,17 @@ Los Angeles, California</p>
 <h2 id="book">Book</h2>
 <p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, forthcoming June 2020).</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
-<p>“Framing a Middle Byzantine Alchemical Codex,” <em>Dumbarton Oaks Papers</em> 73 (forthcoming 2020).</p>
+<h3 id="forthcoming">forthcoming</h3>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus,” in <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming 2021).</p>
+<p>“Framing a Middle Byzantine Alchemical Codex,” <em>Dumbarton Oaks Papers</em> 73 (forthcoming 2020).</p>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics,” in <em>Language Multiplicity in Byzantium and Beyond</em>, ed. Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna University Press through Vandenhoeck &amp; Ruprecht, forthcoming).</p>
-<p>“<a href="https://doi.org/10.1163/9789004415041_009">A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch</a>,” chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2019), 198–240.</p>
+<h3 id="section">2020</h3>
+<p>“<a href="https://doi.org/10.1163/9789004415041_009">A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch</a>,” chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240.</p>
+<h3 id="section-1">2017</h3>
 <p>“<a href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">Being a Sabian at Court in Tenth-Century Baghdad</a>,” <em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277. [<a href="https://doi.org/10.5281/zenodo.893166">pdf</a>]</p>
+<h3 id="section-2">2013</h3>
 <p>“<a href="http://www.worldcat.org/oclc/849906618">The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees,’</a>” in <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013), 279–303. [<a href="https://doi.org/10.5281/zenodo.893168">pdf</a>]</p>
+<h3 id="section-3">2011</h3>
 <p>“<a href="https://doi.org/10.4000/beo.406">Al-Mansur and the Critical Ambassador</a>,” <em>Bulletin d’études orientales</em> 60 (2011): 145–160. [<a href="https://doi.org/10.5281/zenodo.893170">pdf</a>]</p>
 <h2 id="encyclopedia-entries">Encyclopedia entries</h2>
 <p>“Basileios von Emesa”; “Theophilos von Edessa.” <em>Lexikon byzantinischer Autoren</em>, ed. A. Riehle and M. Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
