--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@ Los Angeles, California</p>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus,” in <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming 2021).</p>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics,” in <em>Language Multiplicity in Byzantium and Beyond</em>, ed.  Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna University Press through Vandenhoeck &amp; Ruprecht, forthcoming).</p>
 <h3 id="section">2020</h3>
-<p>“<a href="https://doi.org/10.1163/9789004415041_009">A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch</a>,” chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240.</p>
+<p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch,” chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240.</p>
 <h3 id="section-1">2019</h3>
-<p>“Framing a Middle Byzantine Alchemical Codex,” <em>Dumbarton Oaks Papers</em> 73 (2019; published May <a href="https://www.hup.harvard.edu/catalog.php?isbn=9780884024637">2020</a>): 69–102.</p>
+<p>“Framing a Middle Byzantine Alchemical Codex,” <em>Dumbarton Oaks Papers</em> 73 (2019): 69–102.</p>
 <h3 id="section-2">2017</h3>
-<p>“<a href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">Being a Sabian at Court in Tenth-Century Baghdad</a>,” <em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277. [<a href="https://doi.org/10.5281/zenodo.893166">pdf</a>]</p>
+<p>“<a href="https://doi.org/10.5281/zenodo.893166">Being a Sabian at Court in Tenth-Century Baghdad</a>,” <em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277.</p>
 <h3 id="section-3">2013</h3>
-<p>“<a href="http://www.worldcat.org/oclc/849906618">The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees,’</a>” in <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013), 279–303. [<a href="https://doi.org/10.5281/zenodo.893168">pdf</a>]</p>
+<p>“<a href="https://doi.org/10.5281/zenodo.893168">The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees,’</a>” in <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013), 279–303.</p>
 <h3 id="section-4">2011</h3>
-<p>“<a href="https://doi.org/10.4000/beo.406">Al-Mansur and the Critical Ambassador</a>,” <em>Bulletin d’études orientales</em> 60 (2011): 145–160. [<a href="https://doi.org/10.5281/zenodo.893170">pdf</a>]</p>
+<p>“<a href="https://doi.org/10.5281/zenodo.893170">Al-Mansur and the Critical Ambassador</a>,” <em>Bulletin d’études orientales</em> <a href="https://doi.org/10.4000/beo.406">60</a> (2011): 145–160.</p>
 <h2 id="encyclopedia-entries">Encyclopedia entries</h2>
 <p>“Basileios von Emesa”; “Theophilos von Edessa.” <em>Lexikon byzantinischer Autoren</em>, ed. A. Riehle and M. Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 <h2 id="book-reviews">Book Reviews</h2>
