--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Los Angeles, California</p>
 </div>
 <h1 id="publications">Publications</h1>
 <h2 id="book">Book</h2>
-<p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, forthcoming June 2020).</p>
+<p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, 2020).</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context,’’ <em>Journal of the Warburg and Courtauld Institutes</em> (forthcoming 2021).</p>
