add link to DOP article

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Los Angeles, California</p>
 <h3 id="section">2020</h3>
 <p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch,” chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240.</p>
 <h3 id="section-1">2019</h3>
-<p>“Framing a Middle Byzantine Alchemical Codex,” <em>Dumbarton Oaks Papers</em> 73 (2019): 69–102.</p>
+<p>“<a href="https://doi.org/10.5281/zenodo.3797823">Framing a Middle Byzantine Alchemical Codex</a>,” <em>Dumbarton Oaks Papers</em> 73 (2019): 69–102.</p>
 <h3 id="section-2">2017</h3>
 <p>“<a href="https://doi.org/10.5281/zenodo.893166">Being a Sabian at Court in Tenth-Century Baghdad</a>,” <em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277.</p>
 <h3 id="section-3">2013</h3>
@@ -57,6 +57,6 @@ Los Angeles, California</p>
 <p>“<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">In Mecca’s Backyard</a>,” <em>Marginalia Review of Books</em>, April 29, 2014.</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated May 2020.</em>]</small></p>
+<p><small>[<em>Last updated July 2020.</em>]</small></p>
 </body>
 </html>
