--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <link rel="stylesheet" href="GitHub2.css">
+  <link rel="stylesheet" href="pubwebsite.css">
 </head>
 <body>
 <header>
