--- a/index.html
+++ b/index.html
@@ -30,23 +30,56 @@ Los Angeles, California</p>
 <p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, 2020).</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
-<p>“A Greek Alchemical Epigram in Its Middle Byzantine Context,’’ <em>Journal of the Warburg and Courtauld Institutes</em> (forthcoming 2021).</p>
-<p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim Ascetic,” <em>Journal of Near Eastern Studies</em> (forthcoming 2021).</p>
-<p>“Mathematical Philology in the Treatise on Double False Position in an Arabic Manuscript at Columbia University,” <em>Philological Encounters</em> 5.3 (forthcoming 2020).</p>
-<p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus,” in <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming 2021).</p>
-<p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics,” in <em>Language Multiplicity in Byzantium and Beyond</em>, ed.  Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna University Press through Vandenhoeck &amp; Ruprecht, forthcoming).</p>
+<p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.’’</p>
+<blockquote>
+<p><em>Journal of the Warburg and Courtauld Institutes</em> (forthcoming 2021).</p>
+</blockquote>
+<p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim Ascetic.”</p>
+<blockquote>
+<p><em>Journal of Near Eastern Studies</em> (forthcoming 2021).</p>
+</blockquote>
+<p>“Mathematical Philology in the Treatise on Double False Position in an Arabic Manuscript at Columbia University.”</p>
+<blockquote>
+<p><em>Philological Encounters</em> 5.3 (forthcoming 2020).</p>
+</blockquote>
+<p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.”</p>
+<blockquote>
+<p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming 2021).</p>
+</blockquote>
+<p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.”</p>
+<blockquote>
+<p>In <em>Language Multiplicity in Byzantium and Beyond</em>, ed. Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna University Press through Vandenhoeck &amp; Ruprecht, forthcoming).</p>
+</blockquote>
 <h3 id="section">2020</h3>
-<p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch,” chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240.</p>
+<p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.”</p>
+<blockquote>
+<p>Chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240.</p>
+</blockquote>
 <h3 id="section-1">2019</h3>
-<p>“<a href="https://doi.org/10.5281/zenodo.3797823">Framing a Middle Byzantine Alchemical Codex</a>,” <em>Dumbarton Oaks Papers</em> 73 (2019): 69–102.</p>
+<p>“<a href="https://doi.org/10.5281/zenodo.3797823">Framing a Middle Byzantine Alchemical Codex</a>.”</p>
+<blockquote>
+<p><em>Dumbarton Oaks Papers</em> 73 (2019): 69–102.</p>
+</blockquote>
 <h3 id="section-2">2017</h3>
-<p>“<a href="https://doi.org/10.5281/zenodo.893166">Being a Sabian at Court in Tenth-Century Baghdad</a>,” <em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277.</p>
+<p>“<a href="https://doi.org/10.5281/zenodo.893166">Being a Sabian at Court in Tenth-Century Baghdad</a>.”</p>
+<blockquote>
+<p><em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277.</p>
+</blockquote>
 <h3 id="section-3">2013</h3>
-<p>“<a href="https://doi.org/10.5281/zenodo.893168">The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees,’</a>” in <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013), 279–303.</p>
+<p>“<a href="https://doi.org/10.5281/zenodo.893168">The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees.’</a>”</p>
+<blockquote>
+<p>In <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013), 279–303.</p>
+</blockquote>
 <h3 id="section-4">2011</h3>
-<p>“<a href="https://doi.org/10.5281/zenodo.893170">Al-Mansur and the Critical Ambassador</a>,” <em>Bulletin d’études orientales</em> <a href="https://doi.org/10.4000/beo.406">60</a> (2011): 145–160.</p>
+<p>“<a href="https://doi.org/10.5281/zenodo.893170">Al-Mansur and the Critical Ambassador</a>.”</p>
+<blockquote>
+<p><em>Bulletin d’études orientales</em> <a href="https://doi.org/10.4000/beo.406">60</a> (2011): 145–160.</p>
+</blockquote>
 <h2 id="encyclopedia-entries">Encyclopedia entries</h2>
-<p>“Basileios von Emesa”; “Theophilos von Edessa.” <em>Lexikon byzantinischer Autoren</em>, ed. A. Riehle and M. Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
+<p>“Basileios von Emesa”; “Theophilos von Edessa.”</p>
+<blockquote>
+<p><em>Lexikon byzantinischer Autoren</em>, ed. A. Riehle and M. Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
+</blockquote>
 <h2 id="book-reviews">Book Reviews</h2>
 <p>Andrea De Giorgi, <em>Ancient Antioch from the Seleucid Era to the Islamic Conquest</em> (Cambridge University Press, 2016).</p>
 <blockquote>
