PHEN art published; change links to pub/pdf

--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@ Los Angeles, California</p>
 <blockquote>
 <p><em>Journal of Near Eastern Studies</em> (forthcoming 2021).</p>
 </blockquote>
-<p>“Mathematical Philology in the Treatise on Double False Position in an Arabic Manuscript at Columbia University.”</p>
-<blockquote>
-<p><em>Philological Encounters</em> 5.3 (forthcoming 2020).</p>
-</blockquote>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.”</p>
 <blockquote>
 <p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming 2021).</p>
@@ -51,29 +47,33 @@ Los Angeles, California</p>
 <p>In <em>Language Multiplicity in Byzantium and Beyond</em>, ed. Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna University Press through Vandenhoeck &amp; Ruprecht, forthcoming).</p>
 </blockquote>
 <h3 id="section">2020</h3>
+<p>“Mathematical Philology in the Treatise on Double False Position in an Arabic Manuscript at Columbia University.”</p>
+<blockquote>
+<p><em>Philological Encounters</em> 5.3 (2020). [<a href="https://doi.org/10.1163/24519197-BJA10007">pub</a>]</p>
+</blockquote>
 <p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.”</p>
 <blockquote>
-<p>Chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240.</p>
+<p>Chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240. [<a href="https://doi.org/10.1163/9789004415041_009">pub</a>]</p>
 </blockquote>
 <h3 id="section-1">2019</h3>
-<p>“<a href="https://doi.org/10.5281/zenodo.3797823">Framing a Middle Byzantine Alchemical Codex</a>.”</p>
+<p>“Framing a Middle Byzantine Alchemical Codex.”</p>
 <blockquote>
-<p><em>Dumbarton Oaks Papers</em> 73 (2019): 69–102.</p>
+<p><em>Dumbarton Oaks Papers</em> 73 (2019): 69–102. [<a href="https://doi.org/10.5281/zenodo.3797823">pdf</a>]</p>
 </blockquote>
 <h3 id="section-2">2017</h3>
-<p>“<a href="https://doi.org/10.5281/zenodo.893166">Being a Sabian at Court in Tenth-Century Baghdad</a>.”</p>
+<p>“Being a Sabian at Court in Tenth-Century Baghdad.”</p>
 <blockquote>
-<p><em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277.</p>
+<p><em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277. [<a href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">pub</a>|<a href="https://doi.org/10.5281/zenodo.893166">pdf</a>]</p>
 </blockquote>
 <h3 id="section-3">2013</h3>
-<p>“<a href="https://doi.org/10.5281/zenodo.893168">The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees.’</a>”</p>
+<p>“The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees.’”</p>
 <blockquote>
-<p>In <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013), 279–303.</p>
+<p>In <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013), 279–303. [<a href="https://doi.org/10.5281/zenodo.893168">pdf</a>]</p>
 </blockquote>
 <h3 id="section-4">2011</h3>
-<p>“<a href="https://doi.org/10.5281/zenodo.893170">Al-Mansur and the Critical Ambassador</a>.”</p>
+<p>“Al-Mansur and the Critical Ambassador.”</p>
 <blockquote>
-<p><em>Bulletin d’études orientales</em> <a href="https://doi.org/10.4000/beo.406">60</a> (2011): 145–160.</p>
+<p><em>Bulletin d’études orientales</em> 60 (2011): 145–160. [<a href="https://doi.org/10.4000/beo.406">pub</a>|<a href="https://doi.org/10.5281/zenodo.893170">pdf</a>]</p>
 </blockquote>
 <h2 id="encyclopedia-entries">Encyclopedia entries</h2>
 <p>“Basileios von Emesa”; “Theophilos von Edessa.”</p>
@@ -83,13 +83,13 @@ Los Angeles, California</p>
 <h2 id="book-reviews">Book Reviews</h2>
 <p>Andrea De Giorgi, <em>Ancient Antioch from the Seleucid Era to the Islamic Conquest</em> (Cambridge University Press, 2016).</p>
 <blockquote>
-<p>“<a href="https://doi.org/10.1017/S1047759400074845">The Paths and Memories Tying Antioch to Its Hinterland</a>,” <em>Journal of Roman Archaeology</em> 30 (2017): 810–817.</p>
+<p>“The Paths and Memories Tying Antioch to Its Hinterland,” <em>Journal of Roman Archaeology</em> 30 (2017): 810–817. [<a href="https://doi.org/10.1017/S1047759400074845">pub</a>]</p>
 </blockquote>
 <p>Timothy Power, <em>The Red Sea from Byzantium to the Caliphate: AD 500–1000</em> (American University in Cairo Press, 2012).</p>
 <blockquote>
-<p>“<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">In Mecca’s Backyard</a>,” <em>Marginalia Review of Books</em>, April 29, 2014.</p>
+<p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29, 2014. [<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">pub</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated August 2020.</em>]</small></p>
+<p><small>[<em>Last updated September 2020.</em>]</small></p>
 </body>
 </html>
