say open when pub version is open access

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Los Angeles, California</p>
 </blockquote>
 <p>Timothy Power, <em>The Red Sea from Byzantium to the Caliphate: AD 500–1000</em> (American University in Cairo Press, 2012).</p>
 <blockquote>
-<p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29, 2014. [<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">pub</a>]</p>
+<p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29, 2014. [<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
 <p><small>[<em>Last updated October 2020.</em>]</small></p>
