--- a/index.html
+++ b/index.html
@@ -18,19 +18,13 @@
 <p>Assistant Professor of Classics<br />
 University of Southern California<br />
 Los Angeles, California</p>
-[ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> ]<br />
-[ <a href="https://hcommons.org/members/amroberts/">hcommons</a> ]<br />
-[ <a href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo</a> ]<br />
-
-<div itemscope="" itemtype="https://schema.org/Person">
-[ <a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:.7em;margin-right:.5em;" alt="ORCID iD icon">orcid</a> ]
-</div>
+<p>[ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> | <a href="https://hcommons.org/members/amroberts/">hcommons</a> | <a href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo</a> | <a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:.7em;margin-right:.5em;" alt="ORCID iD icon">orcid</a> ]</p>
 <h1 id="publications">Publications</h1>
 <h2 id="book">Book</h2>
 <p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, 2020).</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
-<p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.’’</p>
+<p>"A Greek Alchemical Epigram in Its Middle Byzantine Context.’’</p>
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> (forthcoming 2021).</p>
 </blockquote>
