--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@ Los Angeles, California</p>
 <p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, 2020).</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
-<p>"A Greek Alchemical Epigram in Its Middle Byzantine Context.’’</p>
+<p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
 <blockquote>
-<p><em>Journal of the Warburg and Courtauld Institutes</em> (forthcoming 2021).</p>
+<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (forthcoming).</p>
 </blockquote>
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim Ascetic.”</p>
 <blockquote>
-<p><em>Journal of Near Eastern Studies</em> (forthcoming 2021).</p>
+<p><em>Journal of Near Eastern Studies</em> (forthcoming).</p>
 </blockquote>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.”</p>
 <blockquote>
-<p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming 2021).</p>
+<p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming).</p>
 </blockquote>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.”</p>
 <blockquote>
