--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@ Los Angeles, California</p>
 </blockquote>
 <p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.”</p>
 <blockquote>
-<p>Chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240. [<a href="https://doi.org/10.1163/9789004415041_009">pub</a>|<a href="https://zenodo.org/record/3476911">PDF</a>]</p>
+<p>Chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240. [<a href="https://doi.org/10.1163/9789004415041_009">pub</a>|<a href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-1">2019</h3>
 <p>“Framing a Middle Byzantine Alchemical Codex.”</p>
 <blockquote>
-<p><em>Dumbarton Oaks Papers</em> 73 (2019): 69–102. [<a href="https://doi.org/10.5281/zenodo.3797823">PDF</a>]</p>
+<p><em>Dumbarton Oaks Papers</em> 73 (2019): 69–102. [<a href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-2">2017</h3>
 <p>“Being a Sabian at Court in Tenth-Century Baghdad.”</p>
 <blockquote>
-<p><em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277. [<a href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">pub</a>|<a href="https://doi.org/10.5281/zenodo.893166">PDF</a>]</p>
+<p><em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277. [<a href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">pub</a>|<a href="https://hcommons.org/deposits/item/hc:15783/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-3">2013</h3>
 <p>“The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees.’”</p>
 <blockquote>
-<p>In <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013), 279–303. [<a href="https://doi.org/10.5281/zenodo.893168">PDF</a>]</p>
+<p>In <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013), 279–303. [<a href="https://hcommons.org/deposits/item/hc:16045/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-4">2011</h3>
 <p>“Al-Mansur and the Critical Ambassador.”</p>
 <blockquote>
-<p><em>Bulletin d’études orientales</em> 60 (2011): 145–160. [<a href="https://doi.org/10.4000/beo.406">pub</a>|<a href="https://doi.org/10.5281/zenodo.893170">PDF</a>]</p>
+<p><em>Bulletin d’études orientales</em> 60 (2011): 145–160. [<a href="https://doi.org/10.4000/beo.406">pub</a>|<a href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
 </blockquote>
 <h2 id="encyclopedia-entries">Encyclopedia entries</h2>
 <p>“Basileios von Emesa”; “Theophilos von Edessa.”</p>
