--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Los Angeles, California</p>
 <h3 id="section">2020</h3>
 <p>“Mathematical Philology in the Treatise on Double False Position in an Arabic Manuscript at Columbia University.”</p>
 <blockquote>
-<p><em>Philological Encounters</em> 5.3–4 (2020): 308–352. [<a href="https://doi.org/10.1163/24519197-BJA10007">pub</a>]</p>
+<p><em>Philological Encounters</em> 5.3–4 (2020): 308–352. [<a href="https://doi.org/10.1163/24519197-BJA10007">pub</a>|<a href="https://zenodo.org/record/4408536">postprint</a>]</p>
 </blockquote>
 <p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.”</p>
 <blockquote>
