add link to JWCI volume abstracts

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Los Angeles, California</p>
 <h3 id="forthcoming">forthcoming</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
 <blockquote>
-<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (forthcoming).</p>
+<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (<a href="https://warburg.sas.ac.uk/publications/journal-warburg-and-courtauld-institutes/jwci-volume-lxxxiii-2020">forthcoming</a>).</p>
 </blockquote>
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim Ascetic.”</p>
 <blockquote>
