add DOP jstor link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Los Angeles, California</p>
 <h3 id="section-1">2019</h3>
 <p>“Framing a Middle Byzantine Alchemical Codex.”</p>
 <blockquote>
-<p><em>Dumbarton Oaks Papers</em> 73 (2019): 69–102. [<a href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
+<p><em>Dumbarton Oaks Papers</em> 73 (2019): 69–102. [<a href="https://www.jstor.org/stable/26955172">pub</a>|<a href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-2">2017</h3>
 <p>“Being a Sabian at Court in Tenth-Century Baghdad.”</p>
