--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@ Los Angeles, California</p>
 <p>[ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> | <a href="https://hcommons.org/members/amroberts/">hcommons</a> | <a href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo</a> | <a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:.7em;margin-right:.5em;" alt="✺">orcid</a> ]</p>
 <h1 id="publications">Publications</h1>
 <h2 id="book">Book</h2>
-<p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, 2020).</p>
+<p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, 2020). [<a href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
 <blockquote>
-<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (<a href="https://warburg.sas.ac.uk/publications/journal-warburg-and-courtauld-institutes/jwci-volume-lxxxiii-2020">forthcoming</a>).</p>
+<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (<a href="https://warburg.sas.ac.uk/publications/journal-warburg-and-courtauld-institutes/jwci-volume-lxxxiii-2020">forthcoming 2021</a>).</p>
 </blockquote>
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim Ascetic.”</p>
 <blockquote>
-<p><em>Journal of Near Eastern Studies</em> 80.1 (forthcoming).</p>
+<p><em>Journal of Near Eastern Studies</em> 80.1 (forthcoming 2021).</p>
 </blockquote>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.”</p>
 <blockquote>
-<p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming).</p>
+<p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming 2022).</p>
 </blockquote>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.”</p>
 <blockquote>
@@ -92,6 +92,6 @@ Los Angeles, California</p>
 <p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29, 2014. [<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated February 2021.</em>]</small></p>
+<p><small>[<em>Last updated April 2021.</em>]</small></p>
 </body>
 </html>
