--- a/index.html
+++ b/index.html
@@ -36,10 +36,6 @@ Los Angeles, California</p>
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (<a href="https://warburg.sas.ac.uk/publications/journal-warburg-and-courtauld-institutes/jwci-volume-lxxxiii-2020">forthcoming 2021</a>).</p>
 </blockquote>
-<p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim Ascetic.”</p>
-<blockquote>
-<p><em>Journal of Near Eastern Studies</em> 80.1 (forthcoming 2021).</p>
-</blockquote>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.”</p>
 <blockquote>
 <p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming 2022).</p>
@@ -48,7 +44,12 @@ Los Angeles, California</p>
 <blockquote>
 <p>In <em>Language Multiplicity in Byzantium and Beyond</em>, ed. Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna University Press through Vandenhoeck &amp; Ruprecht, forthcoming).</p>
 </blockquote>
-<h3 id="section">2020</h3>
+<h3 id="section">2021</h3>
+<p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim Ascetic.”</p>
+<blockquote>
+<p><em>Journal of Near Eastern Studies</em> 80.1 (2021): 143–166. [<a href="https://www.journals.uchicago.edu/doi/10.1086/712785">pub</a>]</p>
+</blockquote>
+<h3 id="section-1">2020</h3>
 <p>“Mathematical Philology in the Treatise on Double False Position in an Arabic Manuscript at Columbia University.”</p>
 <blockquote>
 <p><em>Philological Encounters</em> 5.3–4 (2020): 308–352. [<a href="https://doi.org/10.1163/24519197-BJA10007">pub</a>|<a href="https://zenodo.org/record/4408536">postprint</a>]</p>
@@ -57,22 +58,22 @@ Los Angeles, California</p>
 <blockquote>
 <p>Chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240. [<a href="https://doi.org/10.1163/9789004415041_009">pub</a>|<a href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-1">2019</h3>
+<h3 id="section-2">2019</h3>
 <p>“Framing a Middle Byzantine Alchemical Codex.”</p>
 <blockquote>
 <p><em>Dumbarton Oaks Papers</em> 73 (2019): 69–102. [<a href="https://www.jstor.org/stable/26955172">pub</a>|<a href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-2">2017</h3>
+<h3 id="section-3">2017</h3>
 <p>“Being a Sabian at Court in Tenth-Century Baghdad.”</p>
 <blockquote>
 <p><em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277. [<a href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">pub</a>|<a href="https://hcommons.org/deposits/item/hc:15783/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-3">2013</h3>
+<h3 id="section-4">2013</h3>
 <p>“The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees.’”</p>
 <blockquote>
 <p>In <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013), 279–303. [<a href="https://hcommons.org/deposits/item/hc:16045/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-4">2011</h3>
+<h3 id="section-5">2011</h3>
 <p>“Al-Mansur and the Critical Ambassador.”</p>
 <blockquote>
 <p><em>Bulletin d’études orientales</em> 60 (2011): 145–160. [<a href="https://doi.org/10.4000/beo.406">pub</a>|<a href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
