--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@ Los Angeles, California</p>
 <p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, 2020). [<a href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
-<p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
-<blockquote>
-<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (<a href="https://warburg.sas.ac.uk/publications/journal-warburg-and-courtauld-institutes/jwci-volume-lxxxiii-2020">forthcoming 2021</a>).</p>
-</blockquote>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.”</p>
 <blockquote>
 <p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming 2022).</p>
@@ -50,6 +46,10 @@ Los Angeles, California</p>
 <p><em>Journal of Near Eastern Studies</em> 80.1 (2021): 143–166. [<a href="https://www.journals.uchicago.edu/doi/10.1086/712785">pub</a>]</p>
 </blockquote>
 <h3 id="section-1">2020</h3>
+<p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
+<blockquote>
+<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020; published May 2021): 1–36.</p>
+</blockquote>
 <p>“Mathematical Philology in the Treatise on Double False Position in an Arabic Manuscript at Columbia University.”</p>
 <blockquote>
 <p><em>Philological Encounters</em> 5.3–4 (2020): 308–352. [<a href="https://doi.org/10.1163/24519197-BJA10007">pub</a>|<a href="https://zenodo.org/record/4408536">postprint</a>]</p>
@@ -61,7 +61,7 @@ Los Angeles, California</p>
 <h3 id="section-2">2019</h3>
 <p>“Framing a Middle Byzantine Alchemical Codex.”</p>
 <blockquote>
-<p><em>Dumbarton Oaks Papers</em> 73 (2019): 69–102. [<a href="https://www.jstor.org/stable/26955172">pub</a>|<a href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
+<p><em>Dumbarton Oaks Papers</em> 73 (2019; published May 2020): 69–102. [<a href="https://www.jstor.org/stable/26955172">pub</a>|<a href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-3">2017</h3>
 <p>“Being a Sabian at Court in Tenth-Century Baghdad.”</p>
