add pub date for BEO article

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Los Angeles, California</p>
 <h3 id="section-5">2011</h3>
 <p>“Al-Mansur and the Critical Ambassador.”</p>
 <blockquote>
-<p><em>Bulletin d’études orientales</em> 60 (2011): 145–160. [<a href="https://doi.org/10.4000/beo.406">pub</a>|<a href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
+<p><em>Bulletin d’études orientales</em> 60 (2011; published May 2012): 145–160. [<a href="https://doi.org/10.4000/beo.406">pub</a>|<a href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
 </blockquote>
 <h2 id="encyclopedia-entries">Encyclopedia entries</h2>
 <p>“Basileios von Emesa”; “Theophilos von Edessa.”</p>
