--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Los Angeles, California</p>
 <h3 id="section-1">2020</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
 <blockquote>
-<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020; published May 2021): 1–36.</p>
+<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020; published May 2021): 1–36. [<a href="https://warburg.sas.ac.uk/publications/journal-warburg-and-courtauld-institutes/jwci-volume-lxxxiii-2020">pub</a>]</p>
 </blockquote>
 <p>“Mathematical Philology in the Treatise on Double False Position in an Arabic Manuscript at Columbia University.”</p>
 <blockquote>
@@ -56,12 +56,12 @@ Los Angeles, California</p>
 </blockquote>
 <p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.”</p>
 <blockquote>
-<p>Chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020), 198–240. [<a href="https://doi.org/10.1163/9789004415041_009">pub</a>|<a href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
+<p>Chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020; published October 2019), 198–240. [<a href="https://doi.org/10.1163/9789004415041_009">pub</a>|<a href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-2">2019</h3>
 <p>“Framing a Middle Byzantine Alchemical Codex.”</p>
 <blockquote>
-<p><em>Dumbarton Oaks Papers</em> 73 (2019; published May 2020): 69–102. [<a href="https://www.jstor.org/stable/26955172">pub</a>|<a href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
+<p><em>Dumbarton Oaks Papers</em> 73 (2019; published May 2020): 69–102. [<a href="https://www.jstor.org/stable/26955172">pub</a>|<a href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>|<a href="https://hyp.is/go?url=https%3A%2F%2Fhcommons.org%2Fdeposits%2Fobjects%2Fhc%3A31588%2Fdatastreams%2FCONTENT%2Fcontent%3Fdownload%3Dtrue&amp;group=__world__">hypothesis</a>]</p>
 </blockquote>
 <h3 id="section-3">2017</h3>
 <p>“Being a Sabian at Court in Tenth-Century Baghdad.”</p>
@@ -93,6 +93,6 @@ Los Angeles, California</p>
 <p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29, 2014. [<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated April 2021.</em>]</small></p>
+<p><small>[<em>Last updated May 2021.</em>]</small></p>
 </body>
 </html>
