--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Los Angeles, California</p>
 <h3 id="section-2">2019</h3>
 <p>“Framing a Middle Byzantine Alchemical Codex.”</p>
 <blockquote>
-<p><em>Dumbarton Oaks Papers</em> 73 (2019; published May 2020): 69–102. [<a href="https://www.jstor.org/stable/26955172">pub</a>|<a href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>|<a href="https://hyp.is/go?url=https%3A%2F%2Fhcommons.org%2Fdeposits%2Fobjects%2Fhc%3A31588%2Fdatastreams%2FCONTENT%2Fcontent%3Fdownload%3Dtrue&amp;group=__world__">hypothesis</a>]</p>
+<p><em>Dumbarton Oaks Papers</em> 73 (2019; published May 2020): 69–102. [<a href="https://www.jstor.org/stable/26955172">pub</a>|<a href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-3">2017</h3>
 <p>“Being a Sabian at Court in Tenth-Century Baghdad.”</p>
