add preprint for Writing and Reading Greek

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Los Angeles, California</p>
 </blockquote>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.”</p>
 <blockquote>
-<p>In <em>Language Multiplicity in Byzantium and Beyond</em>, ed. Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna University Press through Vandenhoeck &amp; Ruprecht, forthcoming).</p>
+<p>In <em>Language Multiplicity in Byzantium and Beyond</em>, ed. Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna University Press through Vandenhoeck &amp; Ruprecht, forthcoming). [<a href="https://doi.org/10.5281/zenodo.5149056">preprint</a>]</p>
 </blockquote>
 <h3 id="section">2021</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
