--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Los Angeles, California</p>
 <h3 id="section">2021</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
 <blockquote>
-<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020; published May 2021): 1–36. [<a href="https://warburg.sas.ac.uk/publications/journal-warburg-and-courtauld-institutes/jwci-volume-lxxxiii-2020">pub</a>]</p>
+<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020; published May 2021): 1–36. [<a href="https://www.ingentaconnect.com/contentone/warburg/jwci/2020/00000083/00000001/art00002">pub</a>]</p>
 </blockquote>
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim Ascetic.”</p>
 <blockquote>
