--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ Los Angeles, California</p>
 <p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, 2020). [<a href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
+<p>“Islamicate Alchemy in Greek Letters on the First Page of <em>Marcianus graecus</em> 299.”</p>
+<blockquote>
+<p><em>Byzantinische Zeitschrift</em> 115.1 (accepted November 2021; expected to appear April 2022).</p>
+</blockquote>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.”</p>
 <blockquote>
 <p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming 2022).</p>
@@ -93,6 +97,6 @@ Los Angeles, California</p>
 <p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29, 2014. [<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated October 2021.</em>]</small></p>
+<p><small>[<em>Last updated November 2021.</em>]</small></p>
 </body>
 </html>
