add new DOP article

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ Los Angeles, California</p>
 <p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, 2020). [<a href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
+<p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar ʿAbdun.”</p>
+<blockquote>
+<p><em>Dumbarton Oaks Papers</em> 76 (accepted November 2021; expected to appear in 2022).</p>
+</blockquote>
 <p>“Islamicate Alchemy in Greek Letters on the First Page of <em>Marcianus graecus</em> 299.”</p>
 <blockquote>
 <p><em>Byzantinische Zeitschrift</em> 115.1 (accepted November 2021; expected to appear April 2022).</p>
