--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Los Angeles, California</p>
 <h3 id="section-1">2020</h3>
 <p>“Mathematical Philology in the Treatise on Double False Position in an Arabic Manuscript at Columbia University.”</p>
 <blockquote>
-<p><em>Philological Encounters</em> 5.3–4 (2020): 308–352. [<a href="https://doi.org/10.1163/24519197-BJA10007">pub</a>|<a href="https://zenodo.org/record/4408536">postprint</a>]|<a href="https://hcommons.org/deposits/item/hc:33383/">PDF</a></p>
+<p><em>Philological Encounters</em> 5.3–4 (2020): 308–352. [<a href="https://doi.org/10.1163/24519197-BJA10007">pub</a>|<a href="https://zenodo.org/record/4408536">postprint</a>|<a href="https://hcommons.org/deposits/item/hc:33383/">PDF</a>]</p>
 </blockquote>
 <p>“Framing a Middle Byzantine Alchemical Codex.”</p>
 <blockquote>
