BZ art published

--- a/index.html
+++ b/index.html
@@ -53,16 +53,10 @@ href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">e
 <blockquote>
 <p><em>Dumbarton Oaks Papers</em> 76 (forthcoming 2022).</p>
 </blockquote>
-<p>“Islamicate Alchemy in Greek Letters on the First Page of
-<em>Marcianus graecus</em> 299.”</p>
-<blockquote>
-<p><em>Byzantinische Zeitschrift</em> 115.1 (forthcoming April
-2022).</p>
-</blockquote>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of
 Chioniades on John of Damascus.”</p>
 <blockquote>
-<p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>,
+<p>In <em>The Diagram as Paradigm: Cross-Cultural Approaches</em>,
 ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC:
 Dumbarton Oaks, forthcoming 2022).</p>
 </blockquote>
@@ -74,7 +68,14 @@ ed. Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna
 University Press through Vandenhoeck &amp; Ruprecht, forthcoming). [<a
 href="https://doi.org/10.5281/zenodo.5149056">preprint</a>]</p>
 </blockquote>
-<h3 id="section">2021</h3>
+<h3 id="section">2022</h3>
+<p>“Islamicate Alchemy in Greek Letters on the First Page of
+<em>Marcianus graecus</em> 299.”</p>
+<blockquote>
+<p><em>Byzantinische Zeitschrift</em> 115.1 (2022): 341–349. [<a
+href="https://doi.org/10.1515/bz-2022-0012">pub</a>]</p>
+</blockquote>
+<h3 id="section-1">2021</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
@@ -87,7 +88,7 @@ Ascetic.”</p>
 <p><em>Journal of Near Eastern Studies</em> 80.1 (2021): 143–166. [<a
 href="https://www.journals.uchicago.edu/doi/10.1086/712785">pub</a>]</p>
 </blockquote>
-<h3 id="section-1">2020</h3>
+<h3 id="section-2">2020</h3>
 <p>“Mathematical Philology in the Treatise on Double False Position in
 an Arabic Manuscript at Columbia University.”</p>
 <blockquote>
@@ -102,7 +103,7 @@ href="https://hcommons.org/deposits/item/hc:33383/">PDF</a>]</p>
 [<a href="https://www.jstor.org/stable/26955172">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-2">2019</h3>
+<h3 id="section-3">2019</h3>
 <p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn
 al-Faḍl of Antioch.”</p>
 <blockquote>
@@ -112,7 +113,7 @@ and Studies 2 (Leiden: Brill, 2020; published October 2019), 198–240.
 [<a href="https://doi.org/10.1163/9789004415041_009">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-3">2017</h3>
+<h3 id="section-4">2017</h3>
 <p>“Being a Sabian at Court in Tenth-Century Baghdad.”</p>
 <blockquote>
 <p><em>Journal of the American Oriental Society</em> 137.2 (2017):
@@ -120,7 +121,7 @@ href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:15783/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-4">2013</h3>
+<h3 id="section-5">2013</h3>
 <p>“The Crossing Paths of Greek and Persian Knowledge in the 9th-century
 Arabic ‘Book of Degrees.’”</p>
 <blockquote>
@@ -130,7 +131,7 @@ Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale,
 2013), 279–303. [<a
 href="https://hcommons.org/deposits/item/hc:16045/">PDF</a>]</p>
 </blockquote>
-<h3 id="section-5">2012</h3>
+<h3 id="section-6">2012</h3>
 <p>“Al-Mansur and the Critical Ambassador.”</p>
 <blockquote>
 <p><em>Bulletin d’études orientales</em> 60 (2011; published May 2012):
