--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@ href="https://www.ingentaconnect.com/contentone/warburg/jwci/2020/00000083/00000
 Ascetic.”</p>
 <blockquote>
 <p><em>Journal of Near Eastern Studies</em> 80.1 (2021): 143–166. [<a
-href="https://www.journals.uchicago.edu/doi/10.1086/712785">pub</a>]</p>
+href="https://www.journals.uchicago.edu/doi/10.1086/712785">pub</a>|<a
+href="https://hcommons.org/deposits/item/hc:38251/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-2">2020</h3>
 <p>“Mathematical Philology in the Treatise on Double False Position in
@@ -160,6 +161,6 @@ href="https://doi.org/10.1017/S1047759400074845">pub</a>]</p>
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated January 2022.</em>]</small></p>
+<p><small>[<em>Last updated April 2022.</em>]</small></p>
 </body>
 </html>
