update JWCI pub link

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ href="https://doi.org/10.1515/bz-2022-0012">pub</a>]</p>
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
 published May 2021): 1–36. [<a
-href="https://www.ingentaconnect.com/contentone/warburg/jwci/2020/00000083/00000001/art00002">pub</a>]</p>
+href="https://doi.org/10.1086/JWCI83010001">pub</a>]</p>
 </blockquote>
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim
 Ascetic.”</p>
