Chioniades page numbers

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Chioniades on John of Damascus.”</p>
 <blockquote>
 <p>In <em>The Diagram as Paradigm: Cross-Cultural Approaches</em>,
 ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC:
-Dumbarton Oaks, 2022). [<a
+Dumbarton Oaks, 2022), 113–148. [<a
 href="https://www.hup.harvard.edu/catalog.php?isbn=9780884024866">pub</a>]</p>
 </blockquote>
 <p>“Islamicate Alchemy in Greek Letters on the First Page of
