link to Chioniades offprint

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ Chioniades on John of Damascus.”</p>
 <p>In <em>The Diagram as Paradigm: Cross-Cultural Approaches</em>,
 ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC:
 Dumbarton Oaks, 2022), 113–148. [<a
-href="https://www.hup.harvard.edu/catalog.php?isbn=9780884024866">pub</a>]</p>
+href="https://www.hup.harvard.edu/catalog.php?isbn=9780884024866">pub</a>|<a
+href="https://hcommons.org/deposits/item/hc:47227/">PDF</a>]</p>
 </blockquote>
 <p>“Islamicate Alchemy in Greek Letters on the First Page of
 <em>Marcianus graecus</em> 299.”</p>
